
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct odd {char* a; } ;


 int printf (char*,char*) ;

odd(struct odd y) {
 struct odd x = y;
 printf("%s\n", x.a);
}
