; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_struct.c_odd.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_struct.c_odd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.odd = type { i8* }

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @odd(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.odd, align 8
  %4 = alloca %struct.odd, align 8
  %5 = getelementptr inbounds %struct.odd, %struct.odd* %3, i32 0, i32 0
  store i8* %0, i8** %5, align 8
  %6 = bitcast %struct.odd* %4 to i8*
  %7 = bitcast %struct.odd* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %6, i8* align 8 %7, i64 8, i1 false)
  %8 = getelementptr inbounds %struct.odd, %struct.odd* %4, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  %10 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %9)
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @printf(i8*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
